feat: make minutes hand moving according to time

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -72,14 +72,19 @@
 
   <script>
     const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
 
     function setDate() {
       const now = new Date();
+
       const seconds = now.getSeconds();
       const secondsDegrees = ((seconds/60) * 360) + 90;
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
-      console.log(seconds);
+      const minutes = now.getMinutes();
+      const minutesDegrees = ((minutes/60) * 360) + 90;
+      minHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
     }
 
     setInterval(setDate, 1000);
