--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -73,6 +73,7 @@
   <script>
     const secondHand = document.querySelector('.second-hand');
     const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
     function setDate() {
       const now = new Date();
@@ -84,6 +85,10 @@
       const minutes = now.getMinutes();
       const minutesDegrees = ((minutes/60) * 360) + 90;
       minHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours/12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
 
     }
 
