--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -64,7 +64,8 @@
 
     function handleUpdate() {
       const suffix = this.dataset.sizing || '';
-      console.log(this.value);
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate));
