--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -17,6 +17,45 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+const arrayOfCities = [];
+fetch(endpoint)
+  .then(response => response.json())
+  .then(data => arrayOfCities.push(...data));
+
+function findMatches(word, arrayOfCities) {
+  return arrayOfCities.filter(place => {
+
+    const regex = new RegExp(word, 'gi');
+    return place.city.match(regex) || place.state.match(regex);
+  });
+}
+
+function numberWithComas(x) {
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+}
+
+function displayResult() {
+  const resultArray = findMatches(this.value, arrayOfCities);
+  const html = resultArray.map(place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+    return `
+    <li>
+      <span class="name">${cityName}, ${stateName} </span>
+      <span class="population">${numberWithComas(place.population)}</span>
+    </li>
+    `;
+  }).join('');
+  suggestions.innerHTML = html;
+}
+
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change', displayResult);
+searchInput.addEventListener('keyup', displayResult);
+
 </script>
   </body>
 </html>
